assets/css/goodmoves-styles.scss
/* ... */
.banner-search {
  background-color: #d1edc4;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56 28' width='56' height='28'%3E%3Cpath fill='%233c7524' fill-opacity='0.26' d='M56 26v2h-7.75c2.3-1.27 4.94-2 7.75-2zm-26 2a2 2 0 1 0-4 0h-4.09A25.98 25.98 0 0 0 0 16v-2c.67 0 1.34.02 2 .07V14a2 2 0 0 0-2-2v-2a4 4 0 0 1 3.98 3.6 28.09 28.09 0 0 1 2.8-3.86A8 8 0 0 0 0 6V4a9.99 9.99 0 0 1 8.17 4.23c.94-.95 1.96-1.83 3.03-2.63A13.98 13.98 0 0 0 0 0h7.75c2 1.1 3.73 2.63 5.1 4.45 1.12-.72 2.3-1.37 3.53-1.93A20.1 20.1 0 0 0 14.28 0h2.7c.45.56.88 1.14 1.29 1.74 1.3-.48 2.63-.87 4-1.15-.11-.2-.23-.4-.36-.59H26v.07a28.4 28.4 0 0 1 4 0V0h4.09l-.37.59c1.38.28 2.72.67 4.01 1.15.4-.6.84-1.18 1.3-1.74h2.69a20.1 20.1 0 0 0-2.1 2.52c1.23.56 2.41 1.2 3.54 1.93A16.08 16.08 0 0 1 48.25 0H56c-4.58 0-8.65 2.2-11.2 5.6 1.07.8 2.09 1.68 3.03 2.63A9.99 9.99 0 0 1 56 4v2a8 8 0 0 0-6.77 3.74c1.03 1.2 1.97 2.5 2.79 3.86A4 4 0 0 1 56 10v2a2 2 0 0 0-2 2.07 28.4 28.4 0 0 1 2-.07v2c-9.2 0-17.3 4.78-21.91 12H30zM7.75 28H0v-2c2.81 0 5.46.73 7.75 2zM56 20v2c-5.6 0-10.65 2.3-14.28 6h-2.7c4.04-4.89 10.15-8 16.98-8zm-39.03 8h-2.69C10.65 24.3 5.6 22 0 22v-2c6.83 0 12.94 3.11 16.97 8zm15.01-.4a28.09 28.09 0 0 1 2.8-3.86 8 8 0 0 0-13.55 0c1.03 1.2 1.97 2.5 2.79 3.86a4 4 0 0 1 7.96 0zm14.29-11.86c1.3-.48 2.63-.87 4-1.15a25.99 25.99 0 0 0-44.55 0c1.38.28 2.72.67 4.01 1.15a21.98 21.98 0 0 1 36.54 0zm-5.43 2.71c1.13-.72 2.3-1.37 3.54-1.93a19.98 19.98 0 0 0-32.76 0c1.23.56 2.41 1.2 3.54 1.93a15.98 15.98 0 0 1 25.68 0zm-4.67 3.78c.94-.95 1.96-1.83 3.03-2.63a13.98 13.98 0 0 0-22.4 0c1.07.8 2.09 1.68 3.03 2.63a9.99 9.99 0 0 1 16.34 0z'%3E%3C/path%3E%3C/svg%3E");
  .content {
    background-color: rgba(255, 255, 255, 0.7);
    padding: $unit $unit*2;
    margin: $unit*3 0;
    .mdc-button--search {
      width: 100%;
      .fa-search {
        position: absolute;
        right: $unit*.75;
      }
    }
  }
}

.home-jobs {
  background-color: #fdfdfd;
  padding: 0 $unit*1.5 $unit !important;
  box-shadow: $toolbar-shadow-reverse;
}
.tfn-latest {
  .mdc-card {
    box-shadow: none;
  }
  .mdc-card:hover::after {
    opacity: 0;
  }
  .gist {
    .mdc-typography--headline {
      font-weight: 400;
      font-size: 1.1rem;
      margin: 0;
    }
    .mdc-card__subtitle {
      font-weight: 400;
      margin: $unit/2 0;
      color: $mdc-theme-secondary;
    }
    .thumbnail img {
      border-radius: 50%;
      width: 84px;
      height: 84px;
      object-fit: cover;
    }
  }
}
.currently-recruiting {
  padding: $unit $unit*1.5 $unit !important;
  box-shadow: $toolbar-shadow-reverse;
  background-color: #ededed;
  .organisation-logo:before {
    content: "";
    display: block;
    padding-top: 100%;
  }
  .organisation-logo {
    border-radius: 5px;
    position: relative;
  	width: 100%;
    background-color: transparent;
    display: flex;
    justify-content: center;
    align-items: center;
    img {
      -webkit-transition: opacity .1s ease-in-out;
      -moz-transition: opacity .1s ease-in-out;
      -ms-transition: opacity .1s ease-in-out;
      -o-transition: opacity .1s ease-in-out;
      transition: opacity .1s ease-in-out;
      mix-blend-mode: multiply;
      filter: grayscale(100%);
      opacity: .8;
      max-width: 100%;
      max-height: 100%;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }
  }
  .organisation-logo:hover {
    // background-color: white;
    img {
      filter: none;
      opacity: 1;
      // mix-blend-mode: normal;
    }
  }
}

// Footer ======================================================================

footer {
  box-shadow: $toolbar-shadow-reverse;
  position: relative;
  z-index: 30;
  border-top: $unit solid $mdc-theme-old;
  background-color: $mdc-theme-secondary;
  background-image: linear-gradient(
  -120deg,
  $mdc-theme-secondary-dark,
  $mdc-theme-secondary-dark $unit*4,
  $mdc-theme-old $unit*4.05,
  $mdc-theme-old $unit*5,
  $mdc-theme-secondary $unit*5.05,
  $mdc-theme-secondary
  );
  .footer-main,
  .footer-copyright {
    padding: 0 $unit;
  }
  .footer-main {
    margin-bottom: $unit/2;
  }
  h3 {
    color: white;
    font-size: 1.2rem;
    border-bottom: $unit/5 solid $mdc-theme-secondary-light;
    margin-top: 0;
    margin-bottom: $unit;
    padding: $unit/(3/4) 0 $unit/2;
    font-weight: 600;
  }
  .about a,
  a {
    color: white;
  }
  .about a:hover,
  a:hover {
    color: white;
  }
  .mdc-list {
    .mdc-list-item {
      padding: 0;
      a {
        font-size: 1rem;
      }
      a:hover {
        text-decoration: underline !important;
      }
    }
    .mdc-list-item:hover::before,
    .mdc-list-item:hover::after {
      opacity: 0;
    }
  }
  .brand-logo {
    display: block;
    text-align: right;
    img {
      margin-bottom: 0;
      width: 125px;
    }
  }
  .mdc-layout-grid {
    padding: 0;
    margin-bottom: 0;
    p {
      margin: 0 0 0.8rem;
      color: white;
    }
  }
  .fa-ul,
  .mdc-list,
  .mdc-list-item {
    font-size: inherit;
    letter-spacing: 0;
  }
  .fa-ul {
    margin: 0 0 0 $unit*1.5;
    li {
      margin-bottom: 0;
      height: $unit*1.5;
      a {
        text-decoration: none;
      }
    }
    li a:hover {
      text-decoration: underline;
    }
    .fa-li {
      .fas, .fal, .far, .fab {
        color: white;
      }
    }
  }
  .contact {
    .fa-ul {
      margin-bottom: $unit !important;
    }
  }
  .mdc-layout-grid p {
    margin-bottom: 0;
  }
  .mdc-list {
    padding: 0;
    .mdc-list-item {
      height: $unit*1.5;
      a {
        text-decoration: none;
      }
    }
  }
  .footer-copyright {
    background-color: $mdc-theme-secondary-dark;
    padding: $unit $unit $unit*0.7;
    margin: 0;
    line-height: 1.2;
    font-size: 0.9rem;
    p {
      margin: 0;
    }
  }
}
/* ... */

